--- a/lobby.html
+++ b/lobby.html
@@ -10,6 +10,9 @@
         <link rel="icon" href="icon.png" type="image/png">
     </head>
     <body>
-     <a href="https://google.com">Sair</a>
+     <script>setTimeout(function(){
+            window.close();
+        }, 5000);</script>
     </body>
+
 </html>
